# tvp_dbio

./: .gitignore  README.md  download_iodb.py  environment.yml  health_tier_analysis.ipynb  hydro_tier_analysis.ipynb  pyproject.toml  rail_tier_analysis.ipynb  tvp_io_lib.py
data/: 20260317_Data_Greenings_clean_NG.xlsx  db_comparison_summary.csv  fastinfra_benchmark.csv  fastinfra_benchmark_all_db.csv  fastinfra_benchmark_enhanced.csv  hospitals.csv  hydro_power_plant.csv  rail.csv  supply_chain_tiers.csv  supply_chain_tiers_all_db.csv  supply_chain_tiers_eora26.csv  supply_chain_tiers_exiobase.csv  supply_chain_tiers_oecd.csv  supply_chain_tiers_wiod.csv
docs/: indicators_and_databases.md  indicators_overview_v4.docx  iodb_download_guide.md
modeled_input_data/: assumptions.txt  hospitals_finance_input.csv  hydro_finance_input.csv  rail_finance_input.csv
old/: convert_to_csv.py  fastinfra_benchmark.py  fastinfra_mrio_benchmark.py  run_all_db.py
output/: rail_tier_analysis.json
